landing-page/black-friday fixed spacing black-friday

--- a/landing-page/black-friday/default/css/styles.less
+++ b/landing-page/black-friday/default/css/styles.less
@@ -44,14 +44,26 @@
 
 				&:nth-of-type(1) {
 					left: -11%;
+
+					&.newborn-bf {
+						left: -6%;
+					}
 				}
 
 				&:nth-of-type(2) {
 					left: -6%;
+
+					&.newborn-bf {
+						left: 0;
+					}
 				}
 
 				&:nth-of-type(3) {
 					left: 0;
+
+					&.newborn-bf {
+						left: 6%;
+					}
 				}
 
 				&:nth-of-type(4) {
@@ -59,7 +71,7 @@
 				}
 
 				&:nth-of-type(5) {
-					left: 12%;
+					left: 11%;
 				}
 			}
 		}
